# zinewire

./: .gitignore  LANGUAGE.md  LICENSE  README.md  pyproject.toml  zinewire-booklet.html
.github/workflows/: deploy-web.yml
examples/field-guide/: basics.md  cover.md  plants.md  reference.md  zinewire.toml
examples/field-guide/data/: seasons.json
examples/mini-zine/: zine.md  zinewire.toml
examples/poetry-chapbook/: poems.md  zinewire.toml
examples/recipe-zine/: recipes.md  zinewire.toml
examples/workshop-manual/: manual.md  zinewire.toml
src/zinewire/: __init__.py  cli.py  config-form.css  config-form.html  config.py  converter.py  directives.py  imposition.py  manual.py  paginator.py  server.py  tables.py  templates.py
src/zinewire/themes/: base.css  booklet.css  frenchfold.css  landing.css  manual.css  micromini.css  minizine.css  print.css  trifold.css  web.css
tests/: test_config.py  test_converter.py  test_directives.py  test_imposition.py  test_integration.py  test_manual.py  test_paginator.py  test_server.py  test_tables.py
tests/fixtures/: sample-manual.md  sample-reference.md  sample-web.md  sample-zine.md
