[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zinewire"
version = "0.1.0"
description = "Markdown to paginated print HTML for zines"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "markdown>=3.4",
    "pymdown-extensions>=10.0",
]

[project.scripts]
zinewire = "zinewire.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/zinewire"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
